# black-diamond

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile
assets/map/: config.toml
assets/player/: config.toml
src/: animation.rs  black_diamond.rs  consts.rs  diamond.rs  dig.rs  game_timer.rs  grid.rs  main.rs  map.rs  movement.rs  player.rs  window.rs
src/components/: bounded.rs  fade_out.rs  mod.rs
src/systems/: clamp.rs  fade_out.rs  mod.rs
