[package]
name = "black_diamond"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
debug-grid = []
debug-diamond-location = []
debug-all = ["debug-grid", "debug-diamond-location"]


[dependencies]
bevy = { version = "0.17", features = ["dynamic_linking"] }
rand = "0.9.2"
serde = "1.0.228"
toml = "0.9.8"
